--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "tc-test": "ng test --watch=false --browsers=ChromeHeadless",
+    "tc-test": "ng test --watch=false --browsers=ChromeHeadless --reporters teamcity",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
@@ -40,6 +40,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-teamcity-reporter": "^1.1.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
