Added screenshot based regression tests

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "@types/jasminewd2": "~2.0.3",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
+    "jasmine-reporters": "^2.3.2",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
@@ -42,6 +43,7 @@
     "karma-jasmine-html-reporter": "^1.4.0",
     "karma-teamcity-reporter": "^1.1.0",
     "protractor": "~5.4.0",
+    "protractor-image-comparison": "^3.7.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
