--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
     "@angular/router": "~8.2.11",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "normalize.css": "^8.0.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.14",
