--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,56 +1,56 @@
 {
-  "name": "frontend",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "tc-test": "ng test --watch=false --browsers=ChromeHeadless --reporters teamcity",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~8.2.11",
-    "@angular/cdk": "~8.2.3",
-    "@angular/common": "~8.2.11",
-    "@angular/compiler": "~8.2.11",
-    "@angular/core": "~8.2.11",
-    "@angular/forms": "~8.2.11",
-    "@angular/material": "~8.2.3",
-    "@angular/platform-browser": "~8.2.11",
-    "@angular/platform-browser-dynamic": "~8.2.11",
-    "@angular/router": "~8.2.11",
-    "font-awesome": "^4.7.0",
-    "hammerjs": "^2.0.8",
-    "normalize.css": "^8.0.1",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.14",
-    "@angular/cli": "~8.3.14",
-    "@angular/compiler-cli": "~8.2.11",
-    "@angular/language-service": "~8.2.11",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
-    "jasmine-reporters": "^2.3.2",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "karma-teamcity-reporter": "^1.1.0",
-    "protractor": "~5.4.0",
-    "protractor-image-comparison": "^3.7.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
-  }
+    "name": "frontend",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "test": "ng test",
+        "tc-test": "ng test --watch=false --browsers=ChromeHeadless --reporters teamcity",
+        "lint": "ng lint",
+        "e2e": "ng e2e"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "~8.2.11",
+        "@angular/cdk": "~8.2.3",
+        "@angular/common": "~8.2.11",
+        "@angular/compiler": "~8.2.11",
+        "@angular/core": "~8.2.11",
+        "@angular/forms": "~8.2.11",
+        "@angular/material": "~8.2.3",
+        "@angular/platform-browser": "~8.2.11",
+        "@angular/platform-browser-dynamic": "~8.2.11",
+        "@angular/router": "~8.2.11",
+        "ionicons": "^4.6.3",
+        "hammerjs": "^2.0.8",
+        "normalize.css": "^8.0.1",
+        "rxjs": "~6.4.0",
+        "tslib": "^1.10.0",
+        "zone.js": "~0.9.1"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.803.14",
+        "@angular/cli": "~8.3.14",
+        "@angular/compiler-cli": "~8.2.11",
+        "@angular/language-service": "~8.2.11",
+        "@types/node": "~8.9.4",
+        "@types/jasmine": "~3.3.8",
+        "@types/jasminewd2": "~2.0.3",
+        "codelyzer": "^5.0.0",
+        "jasmine-core": "~3.4.0",
+        "jasmine-reporters": "^2.3.2",
+        "jasmine-spec-reporter": "~4.2.1",
+        "karma": "~4.1.0",
+        "karma-chrome-launcher": "~2.2.0",
+        "karma-coverage-istanbul-reporter": "~2.0.1",
+        "karma-jasmine": "~2.0.1",
+        "karma-jasmine-html-reporter": "^1.4.0",
+        "karma-teamcity-reporter": "^1.1.0",
+        "protractor": "~5.4.0",
+        "protractor-image-comparison": "^3.7.0",
+        "ts-node": "~7.0.0",
+        "tslint": "~5.15.0",
+        "typescript": "~3.5.3"
+    }
 }
