--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,9 @@
         "@angular/platform-browser": "~8.2.11",
         "@angular/platform-browser-dynamic": "~8.2.11",
         "@angular/router": "~8.2.11",
-        "ionicons": "^4.6.3",
         "hammerjs": "^2.0.8",
+        "ionicons": "^4.6.3",
+        "ngx-quicklink": "^0.1.5",
         "normalize.css": "^8.0.1",
         "rxjs": "~6.4.0",
         "tslib": "^1.10.0",
